[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes_Scripts/FightHUD.gd" type="Script" id=1]
[ext_resource path="res://KarmaFuture.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[node name="FightHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HitButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 1 )
text = "Hit"

[node name="InventoryButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -200.0
margin_right = -200.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 1 )
text = "Inventory"

[node name="RunButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -60.0
margin_right = 100.0
custom_fonts/font = SubResource( 1 )
text = "Run"

[node name="HealthLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "HP: "

[node name="HealthNumberLabel" type="Label" parent="."]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )

[node name="DamageTakenLabel" type="Label" parent="."]
margin_left = 89.0
margin_top = 32.0
margin_right = 129.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )

[node name="InfoLabel" type="Label" parent="."]
margin_left = 302.0
margin_top = 343.0
margin_right = 741.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 2 )
[connection signal="pressed" from="HitButton" to="." method="_on_HitButton_pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="RunButton" to="." method="_on_RunButton_pressed"]
